hw17 check on linux